Basic Infastructure Updated
same as before

--- a/views/error.html
+++ b/views/error.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Error Happens Team!</title>
 </head>
 <body>
-
+    <p>
+        Something bad happens. Good luck and keep the spirit up team!
+    </p>
 </body>
 </html>
