--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CognitiveCanvas Main Page</title>
 </head>
 <body>
+
+    <h1>Welcome to Cognitive Canvas!</h1>
+
 
 </body>
 </html>
