--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,15 @@
 <body>
 
     <h1>Welcome to Cognitive Canvas!</h1>
+    <br>
+
+    <iframe id="webstratesHere" src="http://webstrates.ucsd.edu/gaurav_cyto/" onload="setSize()">
+        <p>ERROR: Your browser does not support iframes.</p>
+    </iframe>
 
 
 </body>
+
+<script src="javascripts/index.js" type="text/javascript"></script>
+
 </html>
