--- a/views/error.html
+++ b/views/error.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>
-        Something bad happens. Good luck and keep the spirit up team!
+        404!!! Something bad happens. Good luck and keep the spirit up team!
     </p>
 </body>
 </html>
