Try to circumvent the cross-domain security protocol but failed
Don't know why there are no message sent back. May be webstrates have something to do with this.

--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,18 @@
     <h1>Welcome to Cognitive Canvas!</h1>
     <br>
 
-    <iframe id="webstratesHere" src="http://webstrates.ucsd.edu/gaurav_cyto/" onload="setSize()">
+    <iframe id="webstratesHere" src="http://webstrates.ucsd.edu/gaurav_cyto/" onload="setSize(); listElements();">
         <p>ERROR: Your browser does not support iframes.</p>
     </iframe>
+
+    <div id="nodeList">
+        <p>Node List</p>
+
+    </div>
+
+    <div id="edgeList">
+        <p>Edge List</p>
+    </div>
 
 
 </body>
