Ensure Same Origin Calling Works
This commit ensures the same-origin DOM access works. Yet there are still issue on identifying which label/Link belong to which node (webstrate team says they will structure that latter).

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to Cognitive Canvas!</h1>
     <br>
 
-    <iframe id="webstratesHere" src="http://webstrates.ucsd.edu/gaurav_cyto/" onload="setSize(); listElements();">
+    <iframe id="webstratesHere" src="http://localhost:3000/sample/" onload="setSize(); listElements();">
         <p>ERROR: Your browser does not support iframes.</p>
     </iframe>
 
@@ -20,6 +20,12 @@
 
     <div id="edgeList">
         <p>Edge List</p>
+
+    </div>
+
+    <div id="labelList">
+        <p>Label List</p>
+
     </div>
 
 
