--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-	<link href="../public/stylesheets/style.css" rel="stylesheet">
+	<link href="stylesheets/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>CognitiveCanvas Main Page</title>
 </head>
