--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,24 +4,32 @@ body {
   	margin: 0;
 	font-family: 'Muli', sans-serif;
 	background-color: #008F95;
+	background-color: white;
 }
 
 a {
   color: #00B7FF;
 }
 .title {
-	background-color: #E24E42;
-	top: 0;
-	margin: 0;
-	padding-top: 25px;
-	padding-bottom: 25px;
+	background-color: grey;
+	top: 10px;
+	position: relative;
+	margin: 0 auto;
+	padding: 0 auto;
+	height: 60px;
+	width: 99.5%;
+	border-radius: 10px;
 }
 .title h1{
-	font-size: 42px;
-	text-align: center;
+	font-size: 28px;
+	text-align: left;
 	color: white;
+	margin-top: 0px;
 	padding-bottom: 0;
-	margin-bottom: 10px;
+	margin-bottom: 0px;
+	padding-top: 50px;
+	padding: 0 2%;
+	color: #0099FA;
 }
 .subtitle{
 	padding-top: 0px;
