--- a/views/index.html
+++ b/views/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-	<link href="stylesheets/style.css" rel="stylesheet">
+	<link href="../public/stylesheets/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>CognitiveCanvas Main Page</title>
 </head>
 <body>
-	<div class="title">
+	<header>
+  <div class="title">
     	<h1>Cognitive Canvas</h1>
-    	<h3 class="subtitle">The Better Way to Learn</h3>
+    	<!--<h3 class="subtitle">The Better Way to Learn</h3>-->
 	</div>
+  </header>
 
-    <iframe id="webstratesHere" src="http://localhost:3000/sample/" onload="setSize(); listElements();">
+    <!--<iframe id="webstratesHere" src="http://webstrate.ucsd.edu/joshD3/" onload="setSize(); listElements();">
         <p>ERROR: Your browser does not support iframes.</p>
-    </iframe>
-    <div class="player">
+    </iframe>-->
+    <!--<div class="player">
     	<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/wC36cepdVjg" frameborder="0" allowfullscreen></iframe>
-    </div>
+    </div>-->
 
-    <div id="nodeList">
+    <!--<div id="nodeList">
         <p>Node List</p>
 
     </div>
@@ -32,7 +34,7 @@
     <div id="labelList">
         <p>Label List</p>
 
-    </div>
+    </div>-->
 
 
 </body>
