--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,32 +4,34 @@ body {
   	margin: 0;
 	font-family: 'Muli', sans-serif;
 	background-color: #008F95;
-	background-color: white;
+	background-color: grey;
+	height: 100vh;
 }
 
 a {
   color: #00B7FF;
 }
 .title {
-	background-color: grey;
-	top: 10px;
-	position: relative;
+	background-color: white;
+	top: 0;
+	position: fixed;
 	margin: 0 auto;
 	padding: 0 auto;
-	height: 60px;
-	width: 99.5%;
-	border-radius: 10px;
+	height: 50px;
+	width: 100%;
+	border-radius: 0px;
+	list-style-type: none;
+	box-shadow: inset 0 2px 6px 0 rgba(0,0,0,0.50);
 }
 .title h1{
 	font-size: 28px;
 	text-align: left;
+	float:left;
 	color: white;
-	margin-top: 0px;
-	padding-bottom: 0;
-	margin-bottom: 0px;
-	padding-top: 50px;
-	padding: 0 2%;
+	height: 45px;
+	padding: 5px 0%;
 	color: #0099FA;
+	margin: 0;
 }
 .subtitle{
 	padding-top: 0px;
@@ -49,4 +51,101 @@ a {
 	padding-left: 20px;
 	padding-top: 20px;
 	margin: 0 auto;
+}
+
+
+li {
+    float: right;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: grey;
+}
+
+.active {
+	box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
+    background-color: #4CAF50;
+    //background-color: #0099FA;
+}
+
+.container {
+	padding: 5px 1.5%;
+    float: left;
+    cursor: pointer;
+}
+.anchor{
+	font-size: 18px;
+}
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+.tabcontent {
+	background-color: white;
+    display: none;
+    padding: 0px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    width: 100%;
+    height: 100%;
+    border: 4px solid #4CAF50;
+    
+}
+.whitespace{
+	box-shadow: 15px 5px black;
+	float: right;
+	padding-top: 50px;
+	height: 94%;
+	width: 25%;
+}
+input[type=text] {
+    width: 130px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+    width: 500px;
+}
+.csearch{
+	padding: 0px;
+	padding-left: 15%;
+    float: left;
+    cursor: pointer;
+
+}
+form{
+	width: 100%
 }
