--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,42 @@
 <body>
 	<header>
   <div class="title">
+      <div class="container" onclick="menu(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
     	<h1>Cognitive Canvas</h1>
-    	<!--<h3 class="subtitle">The Better Way to Learn</h3>-->
-	</div>
-  </header>
+      <div class="csearch">
+        <form>
+          <input type="text" name="search" placeholder="Search..">
+        </form>
+      </div>
+    	<!--<h3 class="subtitle">The Better Way to Learn</h3>
+	 
+      <li><button class="tablinks" onclick="openTool(event, 'London')">London</button></li>
+      <li><button class="tablinks" onclick="openTool(event, 'Paris')">Paris</button></li>
+      <li><button class="tablinks" onclick="openTool(event, 'Tokyo')">Tokyo</button></li>
+    </div>-->
+    <li><a class="anchor" onclick="openTool(event, 'Resources')">Resources</a></li>
+    <li><a class="anchor" onclick="openTool(event, 'Notes')">Notes</a></li>
+    <li><a class="anchor" onclick="openTool(event, 'Tools')">Tools</a></li>
 
+  </div>
+  </header>
+      <div class="whitespace">
+        <div id="Resources" class="tabcontent">
+          <p>Resources from class goes here</p>
+        </div>
+
+        <div id="Notes" class="tabcontent">
+          <p>Notes from students go here</p>
+        </div>
+
+        <div id="Tools" class="tabcontent">
+          <p>Tools for CognitiveCanvas go here</p>
+        </div>
+      </div>
     <!--<iframe id="webstratesHere" src="http://webstrate.ucsd.edu/joshD3/" onload="setSize(); listElements();">
         <p>ERROR: Your browser does not support iframes.</p>
     </iframe>-->
@@ -39,48 +70,5 @@
 
 </body>
 
-<script src="javascripts/index.js" type="text/javascript"></script>
-<script>
-      // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
-
-      tag.src = "https://www.youtube.com/iframe_api";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-      // 3. This function creates an <iframe> (and YouTube player)
-      //    after the API code downloads.
-      var player;
-      function onYouTubeIframeAPIReady() {
-        player = new YT.Player('player', {
-          height: '390',
-          width: '640',
-          videoId: 'M7lc1UVf-VE',
-          events: {
-            'onReady': onPlayerReady,
-            'onStateChange': onPlayerStateChange
-          }
-        });
-      }
-
-      // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
-        event.target.playVideo();
-      }
-
-      // 5. The API calls this function when the player's state changes.
-      //    The function indicates that when playing a video (state=1),
-      //    the player should play for six seconds and then stop.
-      var done = false;
-      function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
-        }
-      }
-      function stopVideo() {
-        player.stopVideo();
-      }
-    </script>
-
+<script src="../public/javascripts/index.js" type="text/javascript"></script>
 </html>
