--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -157,6 +157,71 @@ form{
     cursor: pointer;
     font-size: 28px;
 }
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+.dropdown {
+	float:left;
+    position: relative;
+    display: block;
+}
+.dropdown1 {
+	float:right;
+    position: relative;
+    display: block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 100px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {
+	background-color: #ddd;
+}
+.show {
+	display:block;
+}
+#color1 {
+	background-color: blue;
+}
+#color2 {
+	background-color: green;
+}
+#color3 {
+	background-color: red;
+}
+#shape1 {
+	background-color: blue;
+}
+#shape2 {
+	background-color: green;
+}
+#shape3 {
+	background-color: red;
+}
 @media screen and (max-width: 980px) {
 	input[type=text] {
 	  	width: 70%;
