--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-body {
+ body {
 	top: 0;
   	padding: 0;
   	margin: 0;
@@ -21,7 +21,7 @@ a {
 	width: 100%;
 	border-radius: 0px;
 	list-style-type: none;
-	box-shadow: inset 0 2px 6px 0 rgba(0,0,0,0.50);
+	box-shadow: 0 2px 6px 0 rgba(176,186,197,0.60);
 }
 .title h1{
 	font-size: 28px;
@@ -64,9 +64,9 @@ li a:hover:not(.active) {
 }
 
 .active {
-	box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
-    background-color: #4CAF50;
-    //background-color: #0099FA;
+  box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
+    //background-color: #4CAF50;
+    background-color: #0099FA;
 }
 
 .container {
@@ -109,7 +109,7 @@ li a:hover:not(.active) {
     border-top: none;
     width: 25%;
     height: 100vh;
-    border: 4px solid #4CAF50;
+    //border: 4px solid #0099FA;;
     box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
     
 }
@@ -120,18 +120,19 @@ input[type=text] {
   margin-right: 0px;
   margin-top: 8px;
   font-size: 17px;
-  border: 1px solid black;
-  box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
+  border: none;
+  background-color: #d9d9d9;
+  box-shadow: inset 0 0px 0px 0 rgba(0,0,0,0.50);
+  border-radius: 8px;
 }
 button {
-  float: center;
-  padding: 6px 15px;
+  padding: 7px 15px;
   margin: 8px 5px;
   background: #ddd;
   font-size: 17px;
   border: none;
   cursor: pointer;
-  box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
+  border-radius: 8px;
 }
 
 button:hover {
