--- a/client/views/index.html
+++ b/client/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CognitiveCanvas Main Page</title>
+    <script type="text/javascript"
 </head>
 <body>
 
