--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 	<link href="../public/stylesheets/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta charset="UTF-8">
     <title>CognitiveCanvas Main Page</title>
 </head>
@@ -41,7 +42,6 @@
           <h1>Articles</h1>
           <a href="http://documents.scribd.com.s3.amazonaws.com/docs/6kjcnc9sow229ks8.pdf?t=1358492541">Article Here</a>
         </div>
-
         <div id="Notes" class="tabcontent">
           <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
           <p>Notes from students go here</p>
