--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,6 +67,8 @@ li a:hover:not(.active) {
   box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
     //background-color: #4CAF50;
     background-color: #0099FA;
+    position:relative;
+
 }
 
 .container {
@@ -98,7 +100,8 @@ li a:hover:not(.active) {
     transform: rotate(45deg) translate(-8px, -8px);
 }
 .tabcontent {
-	position: fixed;
+  position:fixed;
+  animation:animateright 0.6s;
 	top:50px;
 	right:0;
 	float:right;
@@ -112,6 +115,16 @@ li a:hover:not(.active) {
     //border: 4px solid #0099FA;;
     box-shadow: 0 4px 6px 0 rgba(176,186,197,0.60);
     
+}
+@keyframes animateright{
+  from{
+    right:-300px;
+    opacity:0;
+    } 
+  to{
+    right:0;
+    opacity:1
+  }
 }
 input[type=text] {
 	max-width: 650px;
