--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-	<link href="../public/stylesheets/style.css" rel="stylesheet">
+	<link href="/client/style/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta charset="UTF-8">
     <title>CognitiveCanvas Main Page</title>
-    <script type="text/javascript"
 </head>
 <body>
 	<header>
@@ -68,30 +67,8 @@
               </div>
           </div>
         </div>
-    <!--<iframe id="webstratesHere" src="http://webstrate.ucsd.edu/joshD3/" onload="setSize(); listElements();">
-        <p>ERROR: Your browser does not support iframes.</p>
-    </iframe>-->
-    <!--<div class="player">
-    	<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/wC36cepdVjg" frameborder="0" allowfullscreen></iframe>
-    </div>-->
-
-    <!--<div id="nodeList">
-        <p>Node List</p>
-
-    </div>
-
-    <div id="edgeList">
-        <p>Edge List</p>
-
-    </div>
-
-    <div id="labelList">
-        <p>Label List</p>
-
-    </div>-->
-
 
 </body>
 
-<script src="../public/javascripts/index.js" type="text/javascript"></script>
+<script src="/client/pages/index.js" type="text/javascript"></script>
 </html>
