queries to get all relative infos

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -18,8 +18,8 @@
       </div>
     	<h1>Cognitive Canvas</h1>
       <div class="csearch">
-          <form action="/action_page.php">
-            <input type="text" placeholder="Search.." name="search">
+          <form action="/keyword/" method="get">
+            <input id="search" type="text" placeholder="Search.." name="search">
             <button type="submit"><i class="fa fa-search"></i></button>
           </form>
       </div>
