enable search get & start to migrate to vue

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -18,7 +18,7 @@
       </div>
     	<h1>Cognitive Canvas</h1>
       <div class="csearch">
-          <form action="/keyword/" method="get">
+          <form action="/searchKeyword" method="get">
             <input id="search" type="text" placeholder="Search.." name="search">
             <button type="submit"><i class="fa fa-search"></i></button>
           </form>
