--- a/client/style/style.css
+++ b/client/style/style.css
@@ -236,6 +236,11 @@ form{
 #shape3 {
 	background-color: red;
 }
+
+#map {
+    height: 100%;
+    width: 100%;
+}
 @media screen and (max-width: 980px) {
 	input[type=text] {
 	  	width: 70%;
