--- a/client/views/index.html
+++ b/client/views/index.html
@@ -9,7 +9,6 @@
     <title>CognitiveCanvas Main Page</title>
 </head>
 <body>
-	<header>
   <div class="title">
       <div class="container" onclick="menu(this)">
         <div class="bar1"></div>
@@ -34,7 +33,9 @@
     <li><a class="anchor" onclick="openTool(event, 'Tools')"><i class="fa fa-wrench"></i></a></li>
 
   </div>
-  </header>
+    <div id = "map">
+        <iframe height="100%" width="100%" src="http://webstrates.ucsd.edu/interaction-refactor/"></iframe>
+    </div>
         <div id="Resources" class="tabcontent">
           <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
           <h1>Videos</h1>
