--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta charset="UTF-8">
+    <meta name="google-signin-client_id" content="808266692102-5mmtiel3cvue10q5t7ibnjlui94f5d96.apps.googleusercontent.com">
     <title>CognitiveCanvas Main Page</title>
 </head>
 <body>
@@ -31,6 +32,7 @@
     <li><a class="anchor" onclick="openTool(event, 'Resources')"><i class="fa fa-file-text-o"></i></a></li>
     <li><a class="anchor" onclick="openTool(event, 'Notes')"><i class="fa fa-sticky-note-o"></i></a></li>
     <li><a class="anchor" onclick="openTool(event, 'Tools')"><i class="fa fa-wrench"></i></a></li>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
   </div>
     <div id = "map">
@@ -72,4 +74,6 @@
 </body>
 
 <script src="/client/pages/index.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 </html>
